--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'DJ'
 - !lcsh 'Europe -- Description and travel'
 - !lcc 'D'
+- GITenberg
 title: Odd Bits of Travel with Brush and Camera
 url: http://www.gutenberg.org/ebooks/36110
